Added Sorting to Leaderboard

--- a/Ullechamp-Api.Core/Ullechamp-Api.Core.csproj
+++ b/Ullechamp-Api.Core/Ullechamp-Api.Core.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp2.1</TargetFramework>
         <RootNamespace>Ullechamp_Api.Core</RootNamespace>
+        <LangVersion>7.1</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
