Added login Twitch integration

--- a/Ullechamp-Api.RestApi/appsettings.Development.json
+++ b/Ullechamp-Api.RestApi/appsettings.Development.json
@@ -5,5 +5,10 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "JwtKey": "ijhgvhgvjkglckhfghgjluigyftkxgdchyftdxgftlyuhf",
+  "JwtIssuer": "https://localhost:5001",
+  "JwtExpireDays": 30,
+  "Client_ID": "qgnb4ep6s4mb0dxt167a0q3xfvsxwc",
+  "Client_Secret": "2um96b4rf7y85ib30787zn6ya11c2c"
 }
