--- a/Ullechamp-Api.RestApi/appsettings.json
+++ b/Ullechamp-Api.RestApi/appsettings.json
@@ -4,5 +4,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtKey": "ijhgvhgvjkglckhfghgjluigyftkxgdchyftdxgftlyuhf",
+  "JwtIssuer": "https://ullechamp.azurewebsites.net",
+  "JwtExpireDays": 30,
+  "Client_ID": "qgnb4ep6s4mb0dxt167a0q3xfvsxwc",
+  "Client_Secret": "2um96b4rf7y85ib30787zn6ya11c2c"
 }
