--- a/Ullechamp-Api.RestApi/Ullechamp-Api.RestApi.csproj
+++ b/Ullechamp-Api.RestApi/Ullechamp-Api.RestApi.csproj
@@ -6,10 +6,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.4" />
@@ -22,6 +18,10 @@
     <ProjectReference Include="..\Ullechamp-Api.Core.Entity\Ullechamp-Api.Core.Entity.csproj" />
     <ProjectReference Include="..\Ullechamp-Api.Core\Ullechamp-Api.Core.csproj" />
     <ProjectReference Include="..\Ullechamp-Api.Infrastructure.Data\Ullechamp-Api.Infrastructure.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\Images" />
   </ItemGroup>
 
 </Project>
